--- a/app/views/activities/show.html.slim
+++ b/app/views/activities/show.html.slim
@@ -79,7 +79,7 @@ hr
   hr
   .h4.mt-3 = t('activity.show.executions')
   = react_component("CalendarManager", { activityId: @activity.id, availableLanguages: @activity.languages.keys.map { |language| language.to_s.sub('language_', '')},
-          activityEvents: ActivityEventBlueprint.render_as_hash(ActivityEvent.all),
+          fixedEvents: ActivityEventBlueprint.render_as_hash(ActivityEvent.all),
           spots: @spots })
 
 
