Color to spots and spots + fields CRUD

--- a/app/views/admin/admin/index.html.slim
+++ b/app/views/admin/admin/index.html.slim
@@ -13,3 +13,6 @@
     - if can?(:create, ActivityCategory)
       li
         = link_to t('nav.activity_category'), admin_activity_categories_path
+    - if can?(:create, Spot)
+      li
+        = link_to t('nav.spots'), admin_spots_path
