--- a/app/views/admin/fixed_events/new.html.slim
+++ b/app/views/admin/fixed_events/new.html.slim
@@ -2,4 +2,4 @@ h1 = t('activity_execution.new.title')
 
 == render 'form'
 
-= link_to t('buttons.back'), admin_activity_events_path
+= link_to t('buttons.back'), admin_fixed_events_path
