--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -31,6 +31,7 @@ html
                 = link_to t('nav.activity_category'), admin_activity_categories_path, class: 'dropdown-item'
                 = link_to t('nav.stufen'), admin_stufen_path, class: 'dropdown-item'
                 = link_to t('nav.activity_event'), admin_activity_events_path, class: 'dropdown-item'
+                = link_to t('nav.fixed_event'), admin_fixed_events_path, class: 'dropdown-item'
                 = link_to t('nav.spots'), admin_spots_path, class: 'dropdown-item'
         ul.navbar-nav.ml-auto
           li.nav-item.dropdown
