--- a/app/views/admin/fields/new.html.slim
+++ b/app/views/admin/fields/new.html.slim
@@ -1,5 +1,5 @@
-h1 = t('activity_execution.new.title')
+h1 = t('fields.new.title')
 
 == render 'form'
 
-= link_to t('buttons.back'), admin_fields_path
+= link_to t('buttons.back'), admin_spot_fields_path(@spot)
