--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,7 @@ html
     = render 'application/favicon'
     = stylesheet_pack_tag 'styles', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+    = render 'shared/variables'
   body
     nav.navbar.navbar-expand-lg.navbar-light.bg-light
       = link_to root_path, class: 'navbar-brand'
