--- a/app/views/shared/_variables.html.slim
+++ b/app/views/shared/_variables.html.slim
@@ -6,5 +6,6 @@ javascript:
         campEnd: '#{Orca::CAMP_END.end_of_day.strftime("%Y-%m-%d %H:%M")}',
         i18n: {
             activityExecutionCalendar: #{(I18n.j('activity_execution_calendar'))}
-        }
+        },
+        manage_spot_link: '#{admin_spots_path}'
     };
